[improve][build] Improve the gradle build to use similar best practices as apache/pulsar build (#10)